apps/homelab/Dneg/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: dneg-rdp
  namespace: dneg
spec:
  entryPoints:
    - rdp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: dneg-rdp
          port: 3389


---

apiVersion: v1
kind: Service
metadata:
  name: dneg-rdp
  namespace: dneg
spec:
  selector:
    vm.kubevirt.io/name: dneg-vm
  ports:
    - name: rdp
      port: 3389
      targetPort: 3389
  type: ClusterIP
